[package]
name = "MotteSeed"
version = "0.1.0"
edition = "2024"

[dependencies]
bencode = "0.1"
thiserror = "2"
sha1 = "0.10.6"
once_cell = "1.21.3"
rand = "0.9"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
